# MobileIDE

./: .aider.conf.yml  .aiderCode.md  .aiderContext.md  .aiderRules.md  .aiderignore  .bashrc  .gitignore  .gitmodules  CHANGES.md  Fixing.md  LICENSE  MobileIDE-Logic  MobileIDE_20260716_220908.md  PROGRESS.md  README.md  README_DE.md  add_lsp_imports.py  aider_guardrails.md  aiderstart.sh  build.gradle.kts  build_all.py  failure.txt  fix.py  fix_build.sh  fix_lsp_exec.py  gradle.properties  gradlew  patch.py  patch2.py  prompt_submodule_template.txt  refactor.py  renovate.json  replace_imports.py  settings.gradle.kts  skills.md  status.md  untitled.txt  untitled1.txt
.github/: CODEOWNERS  FUNDING.yml
aider_templates/: create_atomic_ui.txt  create_mvi_feature.txt  update_dependency.txt
app/: .gitignore  MobileIDE.jks  build.gradle.kts  keystore.properties  proguard-rules.pro
assets/: fix_lsp_imports.py  (+3 more)
plugins/json-lsp/light-json-lsp/: .gitignore  Cargo.toml  LICENSE  README.md
plugins/json-lsp/light-json-lsp/.cargo/: config.toml
plugins/json-lsp/light-json-lsp/.github/workflows/: release.yml
plugins/json-lsp/light-json-lsp/crates/lsp-server/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
plugins/json-lsp/light-json-lsp/crates/lsp-server/src/: msg.rs
plugins/json-lsp/light-json-lsp/src/: colors.rs  completion.rs  diagnostics.rs  document.rs  folding.rs  formatting.rs  hover.rs  lib.rs  links.rs  main.rs  schema.rs  selection.rs  server.rs  symbols.rs  tree.rs
plugins/json-lsp/light-json-lsp/src/schema/: resolver.rs  types.rs  validation.rs
(+1509 files in other folders)
