[package]
name = "light-json-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
# LSP
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"

# Parsing
tree-sitter = "0.26"
tree-sitter-json = "0.24"
line-index = "0.1"
itoa = "1"

# Schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", default-features = false, features = ["json", "rustls"] }
regex = "1"
globset = "0.4"
percent-encoding = "2"
# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
lsp-server = { path = "crates/lsp-server" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
